--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
@@ -32,6 +32,8 @@
         <script src="_framework/blazor.webassembly.js"></script>
         <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.js"></script>
+        <script src="js/charts.js"></script>
     </div>;
 
     public static RenderFragment GetDefaultRouter(Assembly appAssembly, IEnumerable<Assembly> additionalAssemblies)
